--- a/css/style.css
+++ b/css/style.css
@@ -91,7 +91,7 @@ header i{
     top: 0;
     background-color: rgb(0,0,0); 
     background-color: rgb(6 3 0 / 77%); 
-    overflow-x: hidden; 
+    overflow-y: hidden;
     transition: 0.5s; 
 }
 .header__menu {
