--- a/css/style.css
+++ b/css/style.css
@@ -17,6 +17,7 @@ i{
     font-size: 38px;
     font-weight: 600;
     line-height: 48px;
+    text-align: center;
 }
 .title p{
     font-family: 'Pacifico', cursive;
@@ -25,13 +26,20 @@ i{
     letter-spacing: 1px;
     line-height: 30px;
     margin-bottom: 0;
+    color:#ff6600;
+    text-align: center;
 }
 p{
     margin: 0;
 }
 
-
 /* HEADER */
+header{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+}
 header .container{
     display: flex;
     justify-content: space-between;
@@ -150,78 +158,14 @@ header i{
       text-align: center;
 }
 
-/*Book*/
-.book{
-    background-color: #ff6600;
-}
-.book__banner{
-    background-image: url(../img/banner3.jpg);
-    min-height: 600px;
-    background-size: cover;
-    background-position: center;
-    position: relative;
-}
-.book__img{
-    position: absolute;
-    background-color: rgb(16 15 19 / 46%);
-    top: 0px;
-    width: 100%;
-    height: 100%;
-}
-.book .col{
-    max-width: 100%;
-    padding: 0;
-}
-.book .title p{
-    color:#fff;
-}
-.book__content p{
-    color: #ffdfc9;
-}
-.book__comment i{
-    background-color: #fff;
-    width: 70px;
-    height: 70px;
-    text-align: center;
-    line-height: 70px;
-    font-size: 1.5rem;
-    transition: all 0.5s;
-}
-.book__deals:hover i, .book__food:hover i{
-    color: #ffc600;
-}
-.book .content p{
-    font-size: 18px;
-    margin-bottom: 1.5rem;
-    margin-top: 1.5rem;
-}
-.book__comment{
-    display: flex;
-    justify-content: space-between;
-    width: 100%;
-}
-.book__comment a{
-    font-size: 20px;
-    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
-    font-weight: 700;
-    color: black;
-    display: block;
-}
-.book__comment p{
-    font-size: 18px;
-    line-height: 28px;
-}
-
 /* CAROUSEL */
-
 .dinerCarousel{
     background-image: linear-gradient(to right, #ff6600, hsl(30deg 100% 1% / 20%)),
     url(../img/banner1.jpg);
     background-size: cover;
     background-repeat: no-repeat;
     background-attachment: fixed;
-    min-height: 700px;
-    
+    min-height: 700px;   
 }
 .dinerCarousel .dinerCarousel__content{
     position: relative;
@@ -263,11 +207,81 @@ header i{
     color: tomato; 
 }
 
+
+/*Book*/
+.book{
+    background-color: #ff6600;
+}
+.book__banner{
+    background-image: url(../img/banner3.jpg);
+    min-height: 600px;
+    background-size: cover;
+    background-position: center;
+    position: relative;
+}
+.book__img{
+    position: absolute;
+    background-color: rgb(16 15 19 / 46%);
+    top: 0px;
+    width: 100%;
+    height: 100%;
+}
+.book .col{
+    max-width: 100%;
+    padding: 0;
+}
+.book .title p{
+    color:#fff;
+    text-align: left;
+}
+.book .title h1{
+    text-align: left;
+}
+.book__content p{
+    color: #ffdfc9;
+}
+.book__comment i{
+    background-color: #fff;
+    width: 70px;
+    height: 70px;
+    text-align: center;
+    line-height: 70px;
+    font-size: 1.5rem;
+    transition: all 0.5s;
+}
+.book__deals:hover i, .book__food:hover i{
+    color: #ffc600;
+}
+.book .content p{
+    font-size: 18px;
+    margin-bottom: 1.5rem;
+    margin-top: 1.5rem;
+}
+.book__comment{
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+}
+.book__comment a{
+    font-size: 20px;
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
+    font-weight: 700;
+    color: black;
+    display: block;
+}
+.book__comment p{
+    font-size: 18px;
+    line-height: 28px;
+}
+
 /* ABOUT US  */
 .about {
     height: 350px;
     align-items: center;
     display: flex;
+}
+.about .title p, .about .title h1{
+    text-align: left;
 }
 .about__content h6{
     font-size: 20px;
@@ -286,5 +300,9 @@ header i{
     font-size: 18px;
     line-height: 28px;
     color: rgb(158 148 152);
-    font-family: 'Quicksand', sans-serif;
+}
+
+/* NEWS */
+.news__image img{
+    width: 100%;
 }
