fix carousel and about

--- a/css/style.css
+++ b/css/style.css
@@ -225,30 +225,29 @@ header i{
 }
 .dinerCarousel .dinerCarousel__content{
     position: relative;
-    top: 200px;
-    margin-left: 200px;
     color: white;
-    margin-bottom: 20px;
     max-width: 600px;
 }
 .dinerCarousel .dinerCarousel__content h3{
-    font-size: 44px;
-    line-height: 53px;
+    font-size: 54px;
+    line-height: 64px;
     font-weight: 600;
-    margin-top: 20px;
-    margin-bottom: 50px;
     text-transform: capitalize;
     color: #fff;
+    font-family: 'Quicksand', sans-serif;
 }
 
 .btn-carousel{
     padding: 15px 40px;
-    margin-top: 50px;
+    margin-top: 30px;
     position: absolute;
     border: solid white;
     border-radius: 5px;
     font-weight: 600;
     font-size: 20px;
+}
+.btn-carousel span{
+    color: white;
 }
 .btn-carousel i{
     color: white;
@@ -262,13 +261,18 @@ header i{
 .btn-carousel:hover i{
     color: tomato; 
 }
-
+.btn-carousel:hover span{
+    color: tomato;
+}
 /* ABOUT US  */
 .about {
-    height: 350px;
+    height: 400px;
     align-items: center;
     display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
 }
+
 .about__content h6{
     font-size: 20px;
     font-weight: 400;
@@ -279,12 +283,18 @@ header i{
     font-family: 'Pacifico', cursive;
 }
 .about__content h3{
-    font-size: 32px;
-    line-height: 40px;
+    font-size: 38px;
+    line-height: 48px;
+    font-weight: 600;
+    font-family: 'Quicksand', sans-serif;
 }
+
+
 .about__content p{
+    margin: 0;
+    padding: 0;
     font-size: 18px;
     line-height: 28px;
     color: rgb(158 148 152);
     font-family: 'Quicksand', sans-serif;
-}
+}   
