--- a/css/style.css
+++ b/css/style.css
@@ -224,7 +224,6 @@ header i{
 }
 
 /* CAROUSEL */
-
 .dinerCarousel{
     background-image: linear-gradient(to right, #ff6600, hsl(30deg 100% 1% / 20%)),
     url(../img/banner1.jpg);
@@ -286,32 +285,61 @@ header i{
 .about .title p, .about .title h1{
     text-align: left;
 }
-.about__content h6{
-    font-size: 20px;
-    font-weight: 400;
-    line-height: 30px;
-    letter-spacing: 1px;
-    color: #ff6600;
-    display: block;
-    font-family: 'Pacifico', cursive;
-}
-.about__content h3{
-    font-size: 38px;
-    line-height: 48px;
-    font-weight: 600;
-    font-family: 'Quicksand', sans-serif;
-}
-
-
 .about__content p{
     margin: 0;
     padding: 0;
-    font-size: 18px;
-    line-height: 28px;
-    color: rgb(158 148 152);
+    font-size: 17px;
+    line-height: 27px;
+    color: rgba(22, 28, 45, 0.7);
 }
 
 /* NEWS */
 .news__image img{
     width: 100%;
+    border-radius: 6px;
+}
+.news__image{
+    position: relative;
+}
+.news__image a::before{
+    content: "";
+    background-color: rgba(255, 255, 255, 0.1);
+    position: absolute;
+    z-index: 2;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    opacity: 0;
+    transition: all 0.5;
+}
+.news__image:hover a::before{
+    opacity: 1;
+}
+.news__image::after{
+    content: "";
+    background: linear-gradient(to bottom, rgba(0, 0, 0, 0) 0, rgba(0, 0, 0, 0.53) 69%, rgba(0, 0, 0, 0.76) 100%);
+    width: 100%;
+    height: 40%;
+    position: absolute;
+    z-index: 2;
+    left: 0;
+    bottom: 0;
+    border-radius: 0 0 6px 6px;
+}
+.news__description{
+    position: absolute;
+    bottom: 23px;
+    left: 64px;
+    z-index: 3;
+}
+.news__description a p{
+    color: #fff;
+    font-size: 22px;
+    font-weight: 700;
+}
+.news__description p{
+    color:#ffc600;
+    font-weight: 600;
+    font-size: 18px;
+    letter-spacing: 1px;
 }
