--- a/css/style.css
+++ b/css/style.css
@@ -343,6 +343,93 @@ header i{
     font-size: 18px;
     letter-spacing: 1px;
 }
+/* TYPE  */
+
+.type__content{
+    padding: 40px 40px;
+    border-radius: 8px;
+    box-shadow: 0 25px 98px 0 rgb(0 0 0 / 3%);
+    background-color: #fff;
+    position: relative;
+    border: 1px solid #eee;
+    font-size: 1rem;
+    font-weight: 400;
+    line-height: 1.5;
+}
+.type__wrap{
+    display: grid;
+    grid-template-columns: auto 1fr;
+    grid-gap: 30px;
+}
+
+.type__icon {
+    width: 70px;
+    height: 70px;
+    text-align: center;
+    background-color: rgba(130, 115, 252, .05);
+    line-height: 70px;
+    border-radius: 6px;
+    transition: 0.3s ease-in-out;
+}
+.type__icon span.fa {
+    color: #ff6600;
+    font-size: 25px;
+    line-height: 70px;
+}
+.type__info p{
+    font-size: 18px;
+    line-height: 28px;
+    color: rgb(158 148 152);
+    font-family: 'Quicksand', sans-serif;
+}
+.type__info h5 a{
+    font-size: 24px;
+    font-weight: 600;
+    margin-top: 5px;
+    margin-bottom: 0px;
+    display: block;
+    color: black;
+}
+
+.type__content p{
+    font-size: 18px;
+    line-height: 28px;
+    color: #9e9498;
+    font-family: 'Quicksand', sans-serif;
+}
+
+.type__icon i.fa-shield-alt{
+    color: #ff6600;
+    font-size: 25px;
+    line-height: 70px;
+    text-align: center;
+}
+
+.type__info h5 a:hover{
+    color: #ff6600;
+}
+
+.type__content:hover .type__icon{
+
+    background-color: #ff6600;
+}
+.type__content:hover .type__icon span.fa{
+    color: white;
+}
+.type__content:hover .type__icon i{
+    color: white;
+}
+.type__content:hover{
+    box-shadow: 0 25px 98px 0 rgb(0 0 0 / 15%);
+}
+
+
+
+
+
+
+
+
 
 /* NUMBER */
 .number__banner{
@@ -461,3 +548,4 @@ header i{
     font-size: 16px;
     color: rgba(22, 28, 45, 0.7);
 }
+
