--- a/css/style.css
+++ b/css/style.css
@@ -679,13 +679,18 @@ footer {
     display: inline;
     text-align: center;
     font-size: 16px;
-    background: var(--bg-color);
+    background: white;
     width: 36px;
     height: 36px;
     line-height: 36px;
-    border-radius: var(--border-radius);
+    border-radius: 5px;
     transition: 0.3s;
 }
 .footer__icon{
     display: flex;
+}
+
+.btn-footer{
+    padding: 12px 45px;
+    background-color: #ff6600;
 }
