--- a/css/style.css
+++ b/css/style.css
@@ -543,8 +543,181 @@ header i{
 
 /* VIDEO  */
 .video{
-    height: 500px;
+    height: 550px;
+    margin-top: 250px;
 }
+.video__bg{
+    background-image: url(../img/banner3.jpg);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    z-index: 1;
+    display: grid;
+    align-items: center;
+    min-height: 500px;
+    border-radius: 10px;
+    position: relative;
+}
+.video__bg::before{
+    content: "";
+    background: #100f1399;
+    position: absolute;
+    top: 0;
+    min-height: 100%;
+    left: 0;
+    right: 0;
+    z-index: -1;
+    border-radius: 10px;
+}
+.video__icon{
+    display: inline-block;
+    width: 80px;
+    height: 80px;
+    font-size: 26px;
+    padding-left: 2px;
+    text-align: center;
+    line-height: 76px;
+    border-radius: 50%;
+    transition: 0.3s ease-in-out;
+    animation: ripple 1s linear infinite;
+    color: #ff6600;
+    border: transparent;
+    background: #fff;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+}
+.video__icon:hover{
+    color: #fff;
+    background: #ff6600;
+    width: 90px;
+    height: 90px;
+    line-height: 85px;
+    font-size: 30px;
+}
+
+.video__play{
+    display: inline-block;
+    font-size: inherit;
+    text-rendering: auto;
+}
+.play-view{
+    left: 0;
+    right: 0;
+    top: calc(50% - 40px);
+}
+#small-dialog{
+    max-width: 750px;
+    margin: 40px auto;
+    position: relative;
+}
+.white-popup {
+    position: relative;
+    background: #FFF;
+    padding: 20px;
+    width: auto;
+    max-width: 500px;
+    margin: 20px auto;
+  }
+
+/* Styles for dialog window */
+#small-dialog,
+#small-dialog1 {
+  padding: 2em;
+  text-align: left;
+  max-width: 100%;
+  margin: 40px auto;
+  position: relative;
+  text-align: center;
+}
+
+/* Magnific Popup CSS */
+.mfp-bg {
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 1042;
+  overflow: hidden;
+  position: fixed;
+  background: black;
+  opacity: 0.9;
+  filter: alpha(opacity=80);
+}
+
+.mfp-wrap {
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 1043;
+  position: fixed;
+  outline: none !important;
+}
+
+.mfp-container {
+  text-align: center;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  left: 0;
+  top: 0;
+  padding: 0 8px;
+}
+
+.mfp-container:before {
+  content: "";
+  display: inline-block;
+  height: 100%;
+  vertical-align: middle;
+}
+
+.mfp-align-top .mfp-container:before {
+  display: none;
+}
+
+.mfp-content {
+  position: relative;
+  display: inline-block;
+  vertical-align: middle;
+  margin: 0 auto;
+  text-align: left;
+  z-index: 1045;
+}
+
+.mfp-inline-holder .mfp-content,
+.mfp-ajax-holder .mfp-content {
+  width: 100%;
+  cursor: auto;
+}
+
+.mfp-hide {
+  display: none !important;
+}
+.mfp-content iframe {
+  width: 100%;
+  min-height: 500px;
+  border: none;
+}
+.mfp-close {
+  width: 15px;
+  height: 15px;
+  line-height: 15px;
+  position: absolute;
+  right: 300px;
+  top: -10px;
+  text-decoration: none;
+  text-align: center;
+  color: white !important;
+  font-style: normal;
+  font-size: 30px;
+  outline: none;
+  font-family: "Open Sans", sans-serif;
+  background: none;
+}
+
+  
 /* POST  */
 .post{
     background-color: #f7f7f7;
@@ -657,12 +830,16 @@ footer {
     position: relative;
     color: #fff;
 }
-.footer__dinner h2{
+.footer__content .footer__dinner{
     font-size: 30px;
     font-weight: 600;
     text-transform: capitalize;
-    color: #fff;
+    color: white;
     padding: 0;
+    margin-bottom: 15px;
+}
+.footer__content .footer__dinner:hover{
+    color: #ff6600;
 }
 .footer__content a{
     display: block;
@@ -686,17 +863,63 @@ footer {
     border-radius: 5px;
     transition: 0.3s;
 }
+.icon__footer:hover{
+    background-color: #ff6600;
+   
+}
+.icon__footer:hover i{
+    color: white;
+}
 .footer__icon{
     display: flex;
 }
-
+.form-control{
+    padding: 20px 20px;
+    font-size: 18px;
+    line-height: 28px;
+    border: 1px solid transparent;
+    outline: none;
+    width: 100%;
+    color: white;
+    background: white;
+    border-radius: 5px;
+    height: 60px;
+}
 .btn-footer{
-    padding: 12px 45px;
     background-color: #ff6600;
+    height: 60px;
+    color: white;
+    padding: 12px 45px;
+    font-size: 16px;
+    line-height: 30px;
+    font-weight: 700;
+    transition: 0.3s ease-in;
+    border-radius: 5px;
+    border: 2px solid transparent;
+}    
+.btn-footer:hover{
+    color: white;
+    opacity: 0.7;
+}
+
+.footer__content ul{
+    list-style: none;
+}
+
+.footer__content li{
+    margin-top: 10px;
+}
+.footer__content a:hover{
+    color: #ff6600;
+}
+
+
+
+
 /* TESTIMONIAL */
 
 .testimonial {
-    margin-top: 250px; /* Sẽ thay đổi sau khi thêm những phần trên */
+  margin-top: 250px; /*Sẽ thay đổi sau khi thêm những phần trên */
 }
 .testimonial .title h1{
     margin-bottom: 50px;
@@ -760,3 +983,19 @@ footer {
 .testimonial .slick-dots li{
     margin: 0 3px;
 }
+
+
+
+
+/* Keyframes */
+
+@keyframes ripple {
+    0% {
+      box-shadow: 0 0 0 0 rgb(255 255 255 / 25%), 0 0 0 10px rgb(255 255 255 / 25%), 0 0 0 20px rgb(255 255 255 / 25%);
+    }
+  
+    100% {
+      box-shadow: 0 0 0 10px rgb(255 255 255 / 25%), 0 0 0 20px rgb(255 255 255 / 25%), 0 0 0 40px rgba(50, 100, 245, 0);
+    }
+  }
+  
