--- a/css/style.css
+++ b/css/style.css
@@ -96,14 +96,20 @@ header i{
     font-size: 21px;
 }
 /* Dark Theme */
-.dark #myBody{
-    background-color:black;
+.dark#myBody{
+    background-color:#232220;
 }
 .dark #switchButton .fa-sun {
     display: block;
 }
 .dark #switchButton .fa-moon {
     display: none;
+}
+.dark#myBody .title h1{
+    color: white;
+}
+.dark#myBody p, .dark#myBody span{
+    color: white;
 }
 /* Nav */
 .header__overlay {  
@@ -274,6 +280,7 @@ header i{
 .btn-carousel:hover span{
     color: tomato;
 }
+
 /* ABOUT US  */
 .about {
     height: 400px;
@@ -288,12 +295,21 @@ header i{
 .about__content p{
     margin: 0;
     padding: 0;
-    font-size: 17px;
+    font-size: 18px;
     line-height: 27px;
     color: rgba(22, 28, 45, 0.7);
 }
 
 /* NEWS */
+#darkTheme{
+    background-color: #f7f7f7;
+}
+.dark#darkTheme{
+    background-color: #282828;
+}
+.dark#darkTheme .title p{
+    color: #ff6600;
+}
 .news__image img{
     width: 100%;
     border-radius: 6px;
@@ -343,8 +359,8 @@ header i{
     font-size: 18px;
     letter-spacing: 1px;
 }
-/* TYPE  */
 
+/* TYPE  */
 .type__content{
     padding: 40px 40px;
     border-radius: 8px;
@@ -361,7 +377,6 @@ header i{
     grid-template-columns: auto 1fr;
     grid-gap: 30px;
 }
-
 .type__icon {
     width: 70px;
     height: 70px;
@@ -390,25 +405,21 @@ header i{
     display: block;
     color: black;
 }
-
 .type__content p{
     font-size: 18px;
     line-height: 28px;
     color: #9e9498;
     font-family: 'Quicksand', sans-serif;
 }
-
 .type__icon i.fa-shield-alt{
     color: #ff6600;
     font-size: 25px;
     line-height: 70px;
     text-align: center;
 }
-
 .type__info h5 a:hover{
     color: #ff6600;
 }
-
 .type__content:hover .type__icon{
 
     background-color: #ff6600;
@@ -544,7 +555,7 @@ header i{
 /* VIDEO  */
 .video{
     height: 550px;
-    margin-top: 250px;
+    margin: 285px 0 45px;
 }
 .video__bg{
     background-image: url(../img/banner3.jpg);
@@ -721,6 +732,7 @@ header i{
 /* POST  */
 .post{
     background-color: #f7f7f7;
+    padding: 100px 0;
 }
 .post__pos{
     position: relative;
@@ -938,10 +950,6 @@ footer {
 
 
 /* TESTIMONIAL */
-
-.testimonial {
-  margin-top: 250px; /*Sẽ thay đổi sau khi thêm những phần trên */
-}
 .testimonial .title h1{
     margin-bottom: 50px;
 }
@@ -1023,9 +1031,6 @@ footer {
     opacity: 0;
     visibility: hidden;
     border-radius: 50%;
-}
-.backToTop__icon i{
-    color: white;
 }
 .cd-top--is-visible {
     visibility: visible;
