--- a/css/style.css
+++ b/css/style.css
@@ -764,8 +764,8 @@ header i{
 }
 .card-body a{
     display: block;
-    font-size: 24px;
-    line-height: 34px;
+    font-size: 20px;
+    line-height: 30px;
     font-weight: 600;
     color: var(--heading-color);
     margin-bottom: 15px;
@@ -821,7 +821,9 @@ header i{
 footer {
     background-color: #000000;
 }
-
+.footer__content{
+    margin-right: -50px;
+}
 .footer__content h2{
     font-size: 22px;
     line-height: 28px;
@@ -916,7 +918,7 @@ footer {
 .footer__last{
     display: flex;
     justify-content: space-between;
-    margin-top: 50px;
+    margin-top: 30px;
 }
 .footer__last1 a{
     color: #ff6600;
@@ -929,13 +931,16 @@ footer {
     color: white;
 }
 .footer__last2 a{
-    color: #a5a2a1;
+    color: #444342;
     margin-left: 50px;
 }
 .footer__last2 a:hover{
     color: #ff6600;
 }
 
+.footer__hr{
+  margin-top: 50px;
+}
 
 /* TESTIMONIAL */
 
@@ -1012,7 +1017,7 @@ footer {
     height: 50PX;
     background-color: #ff6600;
     color: white;
-    font-size: 1rem;
+    font-size: 1.3rem;
     text-align: center;
     line-height: 50px;
     display: block;
@@ -1029,7 +1034,7 @@ footer {
 }
 .cd-top--is-visible {
     visibility: visible;
-    opacity: 0.7;
+    opacity: 1;
   }
 
 
