--- a/css/style.css
+++ b/css/style.css
@@ -254,7 +254,6 @@ header i{
     color: #fff;
     font-family: 'Quicksand', sans-serif;
 }
-
 .btn-carousel{
     padding: 15px 40px;
     margin-top: 30px;
@@ -951,11 +950,9 @@ footer {
     color: white;
     opacity: 0.7;
 }
-
 .footer__content ul{
     list-style: none;
 }
-
 .footer__content li{
     margin-top: 10px;
 }
@@ -985,9 +982,8 @@ footer {
 .footer__last2 a:hover{
     color: #ff6600;
 }
-
-.footer__hr{
-  margin-top: 50px;
+.footer__bottom{
+    border-top: 1px solid rgb(255 255 255 / 5%);
 }
 
 /* TESTIMONIAL */
@@ -1101,5 +1097,72 @@ footer {
     100% {
       box-shadow: 0 0 0 10px rgb(255 255 255 / 25%), 0 0 0 20px rgb(255 255 255 / 25%), 0 0 0 40px rgba(50, 100, 245, 0);
     }
-  }
-  
+}
+
+
+@media screen and (max-width: 768px){
+    .dinerCarousel{
+        margin-top: 65px;
+    }
+    header{
+        margin-top: 60px;
+    }
+}
+@media screen and (max-width: 576px){
+    .header__form form, .header__icon{
+        visibility: hidden;
+        opacity: 0;
+    }
+    header .container{
+        width: 92%;
+    }
+    header a{
+        font-size: 54px;
+    }
+    .header__dark i{
+        font-size: 30px;
+        padding-right: 30px;
+    }
+    .header__nav .fa-bars i{
+        font-size: 45px;
+    }
+    header{
+        top: 25px;
+        left: -13px;
+    }
+    .header__nav .fa-times i{
+        font-size: 12px;
+    }
+    .dinerCarousel{
+        width: 148%;
+    }
+    .book{
+        width: 145%;
+    }
+    .book__content{
+        margin: 0 37px;
+    }
+    .book__content .content p, .book__comment p, .book__comment a{
+        font-size: 24px;
+        line-height: 40px;
+    }
+    .book__comment{
+        width: 110%;
+    }
+    .book__food{
+        margin-left: 25px;
+    }
+    .book__comment i{
+        width: 110px;
+        height: 100px;
+        line-height: 100px;
+        text-align: center;
+        font-size: 35px;
+    }
+}
+@media screen and (max-width: 992px){
+    .book__banner{
+        min-height: 185px;
+        margin: 50px 10px;
+    }
+}
